button alignment in terms n condition fixed

--- a/src/app/assign-viewer/assign-viewer.component.css
+++ b/src/app/assign-viewer/assign-viewer.component.css
@@ -56,7 +56,7 @@ mat-header-cell.mat-header-cell {
 }
 
 .cancel {
-  margin-top: 40px;
+  /* margin-top: 40px; */
   width: 25%; 
   /* height: 47px; */
 }
@@ -68,7 +68,7 @@ mat-header-cell.mat-header-cell {
 
 
 .cancel {
-  margin-top: 40px;
+  /* margin-top: 40px; */
   width: 87px;
   height: 47px;
   border-radius: 1.25rem !important;
