--- a/src/app/inspector-registration/inspector-registration.component.css
+++ b/src/app/inspector-registration/inspector-registration.component.css
@@ -45,7 +45,7 @@
 }
 
 .cancel {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     width: 25%; 
     /* height: 47px; */
 }
@@ -61,7 +61,7 @@
 } */
 
 .cancel {
-    margin-top: 40px;
+    /* margin-top: 40px; */
     width: auto;
     /* height: 47px; */
 }
